# hello_world

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  coverage.xml  dump_code.sh  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  release-please-config.json  setup.cfg
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  docs.yml  release.yml
api/: index.html
docs/: api.md  index.md
scripts/: rename.py
search/: search_index.json
src/hello_world/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_properties.py
