[project]
name = "hello-world-andrefellipe"
version = "0.1.2"
description = "A state-of-the-art Python package boilerplate."
authors = [
    {name = "Andre Fellipe",email = "andrefellipern@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "hello_world", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "nox (>=2026.4.10,<2027.0.0)",
    "nox-poetry (>=1.2.0,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocstrings (>=1.0.4,<2.0.0)",
    "mkdocstrings-python (>=2.0.3,<3.0.0)",
    "mutmut (>=3.5.0,<4.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
